[package]
name = "landingbench"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio-stream = "0.1.17"
prost = "0.14.1"
prost-types = "0.14.1"
serde = "1.0.228"
toml = "0.9.8"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14.3", features = ["tls-native-roots"] }
tonic-prost = "0.14.2"
futures = "0.3.31"
futures-util = "0.3.31"
bs58 = "0.5.1"
bincode = "1.3.3"
bytes = "1.11.0"
solana-pubkey = "2.3.0"
dashmap = "6.1.0"
anyhow = "1.0.100"
blake3 = "1.8.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "1.0.69"
solana-client = "2.3.13"
solana-sdk = "2.3.1"
solana-rpc-client-nonce-utils = "2.3.13"
solana-nonce = "2.2.1"
url = "2.5.8"
quinn = "0.11.9"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
arc-swap = "1.8.0"
solana-tls-utils = "2.3.13"

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3.2"
